beautificatioon v0.4 + made the player movement smoother + looks nicer + squashed a silly bug

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ input[type="range"]::-moz-range-thumb {
   height: 40px;
 }
 #solve_maze_button {
-  width: 100px;
+  width: 120px;
   height: 40px;
 }
 
